<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/main_menu_setting"
    android:title="@string/main_menu_setting"
    android:icon="@android:drawable/ic_menu_preferences" />
  <item
    android:id="@+id/main_menu_about"
    android:title="@string/main_menu_about"
    android:icon="@android:drawable/ic_menu_info_details" />
  <item
    android:id="@+id/main_menu_reload"
    android:title="@string/main_menu_reload"
    android:icon="@android:drawable/ic_menu_rotate" />
  <item
    android:id="@+id/main_menu_moveto"
    android:title="@string/main_menu_moveto"
    android:icon="@android:drawable/ic_menu_set_as" />
  <item
    android:id="@+id/main_menu_exit"
    android:title="@string/main_menu_exit"
    android:icon="@android:drawable/ic_menu_close_clear_cancel" />
</menu>